# tof-control

./: .gitignore  Cargo.toml  README.md  build_and_deploy.sh  build_and_deploy.sh.default
.github/workflows/: build-rb-software.yml  build-tof-software.yml
docs/: rat-control.md
src/: constant.rs  cpc_control.rs  device.rs  helper.rs  i2c_bus_lock.rs  lib.rs  ltb_control.rs  main.rs  memory.rs  pa_control.rs  pb_control.rs  preamp_control.rs  rb_control.rs  switch_control.rs  tui.rs
src/config/: nts_config.csv
src/config/rb_config/: si5345b.h
src/cpc_control/: cpc_temp.rs  cpc_vcp.rs
src/cpu_control/: cpu_info.rs  cpu_temp.rs
src/device/: ad5675.rs  bme280.rs  cy8c9560a.rs  ina219.rs  ina226.rs  lis3mdltr.rs  max11615.rs  max11617.rs  max11645.rs  max5815.rs  max5825.rs  max7320.rs  si5345b.rs  tmp1075.rs  tmp112.rs
src/helper/: cpc_type.rs  cpu_type.rs  ltb_type.rs  pa_type.rs  pb_type.rs  preamp_type.rs  rb_type.rs  switch_type.rs  tcpc_type.rs
src/ltb_control/: ltb_dac.rs  ltb_influxdb.rs  ltb_init.rs  ltb_mode.rs  ltb_table.rs  ltb_temp.rs  ltb_threshold.rs
src/pa_control/: pa_bias.rs  pa_temp.rs
src/pb_control/: pb_dac.rs  pb_influxdb.rs  pb_init.rs  pb_ltb_pwr.rs  pb_table.rs  pb_temp.rs  pb_vcp.rs
src/preamp_control/: preamp_bias.rs  preamp_influxdb.rs  preamp_init.rs  preamp_table.rs  preamp_temp.rs
src/rb_control/: rb_clk.rs  rb_config.rs  rb_dac.rs  rb_gpioe.rs  rb_influxdb.rs  rb_info.rs  rb_init.rs  rb_input.rs  rb_mag.rs  rb_mode.rs  rb_ph.rs  rb_reset.rs  rb_table.rs  rb_temp.rs  rb_vcp.rs
src/switch_control/: switch_info.rs  switch_port.rs  switch_util.rs
src/tcpc_control/: tcpc_temp.rs  tcpc_vcp.rs
src/tui/: cpu_app.rs  cpu_crossterm.rs  ltb_ui.rs  pa_ui.rs  pb_ui.rs  preamp_ui.rs  rat_app.rs  rat_crossterm.rs  rat_ui.rs  rb_ui.rs
