[package]
name = "tof-control"
version = "0.5.2"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [target.armv7-unknown-linux-musleabi]
# linker = "arm-linux-musleabi-gcc"

[profile.release]
opt-level = "z"

[[bin]]
name = "rat-hkp"
path = "src/bin/rat_hkp.rs"

[[bin]]
name = "rb-dac"
path = "src/bin/rb_dac.rs"

[[bin]]
name = "tof-stress"
path = "src/bin/tof_stress.rs"

[[bin]]
name = "sys-control"
path = "src/bin/sys_control.rs"

[[bin]]
name = "cpu-tui"
path = "src/bin/cpu_tui.rs"

[[bin]]
name = "rat-tui"
path = "src/bin/rat_tui.rs"

[[bin]]
name = "andrew-test"
path = "src/bin/andrew_test.rs"

[[bin]]
name = "tcpc-control"
path = "src/bin/tcpc_control.rs"

[[bin]]
name = "cpc-control"
path = "src/bin/cpc_control.rs"

[[bin]]
name = "mtb-control"
path = "src/bin/mtb_control.rs"

[[bin]]
name = "switch-control"
path = "src/bin/switch_control.rs"

[[bin]]
name = "cpu-control"
path = "src/bin/cpu_control.rs"

[[bin]]
name = "rat-reset"
path = "src/bin/rat_reset.rs"

[[bin]]
name = "rat-init"
path = "src/bin/rat_init.rs"

[[bin]]
name = "rat-control"
path = "src/bin/rat_control.rs"

[[bin]]
name = "rb-control"
path = "src/bin/rb_control.rs"

[[bin]]
name = "rb-clk-rst"
path = "src/bin/rb_clk_rst.rs"

[[bin]]
name = "rb-wd"
path = "src/bin/rb_wd.rs"

[[bin]]
name = "ltb-control"
path = "src/bin/ltb_control.rs"

[[bin]]
name = "pb-control"
path = "src/bin/pb_control.rs"

[[bin]]
name = "preamp-control"
path = "src/bin/preamp_control.rs"

[[bin]]
name = "i2c-check"
path = "src/bin/i2c_check.rs"

[[bin]]
name = "rb-clk-nvm"
path = "src/bin/rb_clk_nvm.rs"


[dependencies]
i2cdev = "0.5.1"
i2c-linux-sys = "0.2.1"
memmap = "0.7"
log = "0.4"
clap = { version = "4.1", features = ["derive"] }
csv = "1.1"
# comfy-table = "7.1.0"
gethostname = "0.4.1"
libc = "0.2.140"
# openssl = { version = "0.10", features = ["vendored"] }
# tokio = "1.27.0"
# tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
# futures = "0.3.28"
chrono = "0.4.24"
# sysfs_gpio = "0.6.1"
systemstat = "0.2.3"
sysinfo = "0.29.10"
snmp = "0.2.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
indicatif = "0.17.7"
chrono-tz = "0.8.4"
ratatui = "0.25.0"
crossterm = "0.27.0"
# openssh = "0.10.3"
# hex = "0.4.3"
# zmq = "0.10.0"

[build-dependencies]
bindgen = "0.64.0"
cc = "1.0.79"
