[package]
name = "tof-control"
version = "1.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"

[[bin]]
name = "rat-control"
path = "src/bin/rat_control.rs"

[[bin]]
name = "rat-init"
path = "src/bin/rat_init.rs"

[[bin]]
name = "rat-reset"
path = "src/bin/rat_reset.rs"

[[bin]]
name = "rat-tui"
path = "src/bin/rat_tui.rs"

[[bin]]
name = "rb-mode"
path = "src/bin/rb_mode.rs"

[[bin]]
name = "rb-dac"
path = "src/bin/rb_dac.rs"

[[bin]]
name = "cpu-control"
path = "src/bin/cpu_control.rs"

[dependencies]
i2cdev = "0.5.1"
memmap = "0.7"
log = "0.4"
clap = { version = "4.1", features = ["derive"] }
csv = "1.1"
gethostname = "0.4.1"
libc = "0.2.140"
chrono = "0.4.24"
systemstat = "0.2.3"
sysinfo = "0.29.10"
snmp = "0.2.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
indicatif = "0.17.7"
chrono-tz = "0.8.4"
ratatui = "0.25.0"
crossterm = "0.27.0"

[build-dependencies]
bindgen = "0.64.0"
cc = "1.0.79"