[package]
name = "tof-control"
version = "1.10.0"
edition = "2021"

[profile.release]
opt-level = "z"

[dependencies]
i2cdev = "0.5.1"
memmap = "0.7"
log = "0.4"
csv = "1.1"
gethostname = "0.4.1"
libc = "0.2.140"
sysinfo = "0.29.10"
snmp = "0.2.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
once_cell = "1.21.3"


[build-dependencies]
bindgen = "0.64.0"
cc = "1.0.79"
